Samples/Errors/MissingSemicolon.gs
//This is a G# program with errors. A quote is missing.

point I "am good";

point But "iam better";

point And "Iam bugged"//Missing semicolon

//End of program